change fields for homepage

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,9 +14,17 @@ collections:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Publish Date", name: "date", widget: "datetime" }
         - { label: "Body", name: "body", widget: "markdown"}
-        - label: 'Cats'
-          name: "cats"
+        - label: 'Products'
+          name: "products"
           widget: list
           fields:
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
+            - { label: "Price", name: "price", widget: "integer"}
+        - label: 'Brands'
+          name: "brands"
+          widget: list
+          fields:
+            - { label: "Name", name: "name", widget: "string"}
+            - { label: "Description", name: "description", widget: "text"}
+            - { label: "Image", name: "image", widget: "image"}
