--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   branch: master
 media_folder: public/img
 public_folder: img
+publish_mode: editorial_workflow
 collections:
   - name: "pages"
     label: "Pages"
