--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,10 @@
 backend:
   name: git-gateway
   branch: master
+backend:
+  name: proxy
+  proxy_url: http://localhost:8081/api/v1
+  branch: master # optional, defaults to master
 media_folder: public/img
 public_folder: img
 publish_mode: editorial_workflow
@@ -80,8 +84,11 @@ collections:
           fields:
             - { label: "Title", name: "title", widget: "string"}
             - { label: "href", name: "href", widget: "text"}
+            - { label: "Image", name: "image", widget: "image"}
         - label: 'styles'
           name: "styles"
           widget: list
           fields:
-            - { label: "Background Color", name: "backgroundColor", widget: "string"}
+            - { label: "Class", name: "class", widget: "string"}
+            - { label: "Rule", name: "rule", widget: "string"}
+            - { label: "Value", name: "value", widget: "string"}
