--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -58,7 +58,7 @@ collections:
       file: "content/home.md"
       fields:
         - { label: "Title", name: "title", widget: "string"}
-        - { label: "Publish Date", name: "date", widget: "datetime" }
+        - { label: "Publish Date", name: "date", widget: "datetime"}
         - { label: "Body", name: "body", widget: "markdown", required: false}
         - { label: "Modules", name: "modules", widget: "relation", collection: "modules", searchFields: ["attributes.title", "attributes.type"], valueField: "attributes", displayFields: ["attributes.title"], required: false}
         - { label: "Header Items", name: "headerItems", widget: "relation", collection: "headerLinks", searchFields: ["attributes.title"], valueField: "attributes", displayFields: ["attributes.title"], required: false}
@@ -72,7 +72,10 @@ collections:
     folder: 'content/modules'
     create: true # Allow users to create new documents in this collection
     fields:
-      - label: "Attributes", name: "title", widget: "object", fields:
+    - label: "Attributes"
+      name: "attributes"
+      widget: "object"
+      fields:
         - { label: "Type", name: "type", widget: "select", options: ["banner"]}
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Body", name: "body", widget: "markdown"}
@@ -85,7 +88,10 @@ collections:
     folder: 'content/headerLinks'
     create: true # Allow users to create new documents in this collection
     fields:
-      - label: "Attributes", name: "title", widget: "object", fields:
+    - label: "Attributes"
+      name: "attributes"
+      widget: "object"
+      fields:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "href", name: "href", widget: "text"}
         - { label: "Image", name: "image", widget: "image", required: false}
@@ -97,7 +103,10 @@ collections:
     folder: 'content/footerLinks'
     create: true # Allow users to create new documents in this collection
     fields:
-      - label: "Attributes", name: "title", widget: "object", fields:
+    - label: "Attributes"
+      name: "attributes"
+      widget: "object"
+      fields:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "href", name: "href", widget: "text"}
         - { label: "Image", name: "image", widget: "image", required: false}
@@ -109,7 +118,10 @@ collections:
     folder: 'content/styles'
     create: true # Allow users to create new documents in this collection
     fields:
-      - label: "Attributes", name: "title", widget: "object", fields:
-        - { label: "Class", name: "class", widget: "string"}
-        - { label: "Rule", name: "rule", widget: "string"}
-        - { label: "Value", name: "value", widget: "string"}
+    - label: "Attributes"
+      name: "attributes"
+      widget: "object"
+      fields:
+          - { label: "Class", name: "class", widget: "string"}
+          - { label: "Rule", name: "rule", widget: "string"}
+          - { label: "Value", name: "value", widget: "string"}
