fix identifier fields again

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -68,10 +68,10 @@ collections:
   # -------------------
   - name: "modules"
     label: 'Modules'
-    identifier_field: title
     folder: 'content/modules'
     create: true # Allow users to create new documents in this collection
     fields:
+    - { label: "Title", name: "title", widget: "string"}
     - label: "Attributes"
       name: "attributes"
       widget: "object"
@@ -85,10 +85,10 @@ collections:
   # -------------------
   - name: "headerLinks"
     label: 'Header Links'
-    identifier_field: title
     folder: 'content/headerLinks'
     create: true # Allow users to create new documents in this collection
     fields:
+    - { label: "Title", name: "title", widget: "string"}
     - label: "Attributes"
       name: "attributes"
       widget: "object"
@@ -101,10 +101,10 @@ collections:
   # -------------------
   - name: "footerLinks"
     label: 'Footer Links'
-    identifier_field: title
     folder: 'content/footerLinks'
     create: true # Allow users to create new documents in this collection
     fields:
+    - { label: "Title", name: "title", widget: "string"}
     - label: "Attributes"
       name: "attributes"
       widget: "object"
@@ -117,10 +117,10 @@ collections:
   # -------------------
   - name: "styles"
     label: 'Page Styles'
-    identifier_field: class
     folder: 'content/styles'
     create: true # Allow users to create new documents in this collection
     fields:
+    - { label: "Title", name: "title", widget: "string"}
     - label: "Attributes"
       name: "attributes"
       widget: "object"
