--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
-  # name: git-gateway
-  name: test-repo
-  # branch: master
+  name: git-gateway
+  # name: test-repo
+  branch: master
 media_folder: public/img
 public_folder: img
 # publish_mode: editorial_workflow
